--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-          <button class="btn btn-danger mx-1 data-toggle="modal" data-target="#loginModal"">Login</button>
-          <button class="btn btn-danger mx-1 data-toggle="modal" data-target="#signupModal"">Sign Up</button>
+          <button class="btn btn-danger mx-1" data-toggle="modal" data-target="#loginModal">Login</button>
+          <button class="btn btn-danger mx-1" data-toggle="modal" data-target="#signupModal">Sign Up</button>
         </div>
       </nav>
 
